# PeopleCounterGtest

./: CMakeCache.txt  GPATH  GRTAGS  GTAGS  Makefile  README.org  out.avi
include/: PeopleCounter.h  PeopleCounter.h~
src/: PeopleCounter  PeopleCounter.cpp  PeopleCounterMain.cpp
test/: CMakeLists.txt  gtest-peoplecounter.cpp  gtestpeoplecounter
